; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_briq_panel.c_set_led.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_briq_panel.c_set_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@led = common dso_local global i32 0, align 4
@BRIQ_PANEL_LED_IOPORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8)* @set_led to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_led(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %3 = load i8, i8* %2, align 1
  %4 = sext i8 %3 to i32
  %5 = icmp eq i32 %4, 82
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* @led, align 4
  br label %25

7:                                                ; preds = %1
  %8 = load i8, i8* %2, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 71
  br i1 %10, label %11, label %12

11:                                               ; preds = %7
  store i32 2, i32* @led, align 4
  br label %24

12:                                               ; preds = %7
  %13 = load i8, i8* %2, align 1
  %14 = sext i8 %13 to i32
  %15 = icmp eq i32 %14, 89
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 3, i32* @led, align 4
  br label %23

17:                                               ; preds = %12
  %18 = load i8, i8* %2, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 88
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  store i32 0, i32* @led, align 4
  br label %22

22:                                               ; preds = %21, %17
  br label %23

23:                                               ; preds = %22, %16
  br label %24

24:                                               ; preds = %23, %11
  br label %25

25:                                               ; preds = %24, %6
  %26 = load i32, i32* @led, align 4
  %27 = load i32, i32* @BRIQ_PANEL_LED_IOPORT, align 4
  %28 = call i32 @outb(i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @outb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
